--- a/js/JS6/package.json
+++ b/js/JS6/package.json
@@ -15,11 +15,22 @@
     "gulp-clean-css": "^3.9.4",
     "gulp-concat": "^2.6.1",
     "gulp-debug": "^4.0.0",
+    "gulp-if": "^2.0.2",
     "gulp-jshint": "^2.1.0",
     "gulp-load-plugins": "^1.5.0",
+    "gulp-plumber": "^1.2.0",
+    "gulp-rev": "^8.1.1",
+    "gulp-rev-replace": "^0.4.4",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
-    "jshint-stylish": "^2.2.1"
+    "gulp-useref": "^3.1.5",
+    "jshint": "^2.9.5",
+    "jshint-stylish": "^2.2.1",
+    "lazypipe": "^1.0.1",
+    "wiredep": "^4.0.0"
+  },
+  "dependencies": {
+    "gulp-filter": "^5.1.0"
   }
 }
